...
            }
        }
    }
    val scope = rememberCoroutineScope()

    AppScaffold(
        title = { Text("Prepare your heart") },
        navController = navController,
        currentScreenInstance = Screen.Home,
        onColorThemeUpdated = onColorThemeUpdated,
        currentTheme = currentTheme,
        content = { paddingValues ->
            Image(
...
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically
            ) {
                Column {
                    Text(
                        text = "Verse of the Day",
                        style = MaterialTheme.typography.headlineSmall,
                        fontWeight = FontWeight.ExtraBold,
                        color = MaterialTheme.colorScheme.primary
                    )
                    Text(
                        text = "(Powered by BibleGateway.com)",
...
                    Button(
                        onClick = onAddClick,
                        enabled = verseContent.isNotEmpty(),
                        contentPadding = PaddingValues(horizontal = 12.dp, vertical = 8.dp)
                    ) {
                        Text(
                            "Add",
                            style = MaterialTheme.typography.labelMedium
                        )
                    }
                }
            }
            HorizontalDivider(modifier = Modifier.padding(vertical = 8.dp))
...
