...
                                    inclusive = true
                                }
                                launchSingleTop = true
                            }
                        }
                    },
                    label = { Text("Home") },
                    icon = { Icon(imageVector = Icons.Filled.Home, contentDescription = "Home") }
                )
                NavigationBarItem(
                    selected = currentScreenInstance is Screen.AllVersesScreen,
                    onClick = {
                        if (currentScreenInstance !is Screen.AllVersesScreen) {
...
                            
                            Log.d("AppScaffold", "Navigation command issued to AllVersesScreen")
                        } else {
                            Log.d("AppScaffold", "Already on AllVersesScreen, ignoring navigation")
                        }
                    },
                    label = { Text("Verses") },
                    icon = {
                        Icon(
                            painter = painterResource(id = R.drawable.ic_meditate_custom),
                            contentDescription = "Review all verses",
                            modifier = Modifier.size(24.dp)
                        )
                    }
                )
                NavigationBarItem(
                    selected = currentScreenInstance is Screen.TopicScreen,
...
